docs: Document known java 10 problems